Feature Rank sorted

--- a/Chi^2 (Kai-Square) Algorithm/Feature Selection Using Chi^2 (Kai-Square).ipynb
+++ b/Chi^2 (Kai-Square) Algorithm/Feature Selection Using Chi^2 (Kai-Square).ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "       [35, 14, 23, ...,  1,  1,  0]], dtype=int64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -531,7 +531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = result.sort_values(by=\"Chi2Weights\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -581,54 +590,54 @@
        "      <td>8453.172122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>gender_F</td>\n",
-       "      <td>305.000000</td>\n",
+       "      <th>19</th>\n",
+       "      <td>NationalITy_venzuela</td>\n",
+       "      <td>479.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>gender_M</td>\n",
-       "      <td>175.000000</td>\n",
+       "      <th>33</th>\n",
+       "      <td>PlaceofBirth_venzuela</td>\n",
+       "      <td>479.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>NationalITy_Egypt</td>\n",
-       "      <td>471.000000</td>\n",
+       "      <th>39</th>\n",
+       "      <td>GradeID_G-05</td>\n",
+       "      <td>477.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>NationalITy_Iran</td>\n",
-       "      <td>474.000000</td>\n",
+       "      <th>44</th>\n",
+       "      <td>GradeID_G-10</td>\n",
+       "      <td>476.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>NationalITy_Iraq</td>\n",
-       "      <td>458.000000</td>\n",
+       "      <th>12</th>\n",
+       "      <td>NationalITy_Morocco</td>\n",
+       "      <td>476.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>NationalITy_Jordan</td>\n",
-       "      <td>308.000000</td>\n",
+       "      <th>26</th>\n",
+       "      <td>PlaceofBirth_Morocco</td>\n",
+       "      <td>476.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Features  Chi2Weights\n",
-       "0         raisedhands  9701.458044\n",
-       "1    VisITedResources  9565.389157\n",
-       "2   AnnouncementsView  8945.649085\n",
-       "3          Discussion  8453.172122\n",
-       "4            gender_F   305.000000\n",
-       "5            gender_M   175.000000\n",
-       "6   NationalITy_Egypt   471.000000\n",
-       "7    NationalITy_Iran   474.000000\n",
-       "8    NationalITy_Iraq   458.000000\n",
-       "9  NationalITy_Jordan   308.000000"
+       "                 Features  Chi2Weights\n",
+       "0             raisedhands  9701.458044\n",
+       "1        VisITedResources  9565.389157\n",
+       "2       AnnouncementsView  8945.649085\n",
+       "3              Discussion  8453.172122\n",
+       "19   NationalITy_venzuela   479.000000\n",
+       "33  PlaceofBirth_venzuela   479.000000\n",
+       "39           GradeID_G-05   477.000000\n",
+       "44           GradeID_G-10   476.000000\n",
+       "12    NationalITy_Morocco   476.000000\n",
+       "26   PlaceofBirth_Morocco   476.000000"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
