fix grammatical mistake

--- a/Chi^2 (Kai-Square) Algorithm/A broad study on Chi^2(Kai-Square) Algorithm.ipynb
+++ b/Chi^2 (Kai-Square) Algorithm/A broad study on Chi^2(Kai-Square) Algorithm.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# A broad study on `Chi^2` algorithm\n",
     "<hr>\n",
-    "#### Before going to broad discussion, first lets understand what it `Chi^2` algorithm ? What it does? Why we need to learn it?"
+    "#### Before going to broad discussion, first lets understand what is `Chi^2` algorithm ? What it does? Why we need to learn it?"
    ]
   },
   {
@@ -160,7 +160,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
