--- a/Outliers Detection and Removing/Outliers_Detection_and_Removing.ipynb
+++ b/Outliers Detection and Removing/Outliers_Detection_and_Removing.ipynb
@@ -5,9 +5,10 @@
     "colab": {
       "name": "Outliers Detection.ipynb",
       "version": "0.3.2",
+      "views": {},
+      "default_view": {},
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,20 +17,15 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/78526Nasir/Research-Work/blob/master/Outliers_Detection.ipynb)"
-      ]
-    },
-    {
       "metadata": {
         "id": "fMJhvQUTRNBI",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -49,7 +45,12 @@
       "metadata": {
         "id": "Uw2OPfVaRnBy",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -62,7 +63,12 @@
       "metadata": {
         "id": "EVcXTeotR5yy",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -75,7 +81,12 @@
       "metadata": {
         "id": "qw7SECBXSOMi",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -89,10 +100,25 @@
         "id": "QFhDRKLzSdTJ",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "8399661c-284d-439f-9dc4-e20bcb288f29"
+        "outputId": "8399661c-284d-439f-9dc4-e20bcb288f29",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1532546493709,
+          "user_tz": -360,
+          "elapsed": 522,
+          "user": {
+            "displayName": "Nasir Islam Sujan",
+            "photoUrl": "//lh5.googleusercontent.com/-NpCHvBqVfWs/AAAAAAAAAAI/AAAAAAAAAUw/a6BBs_6o9Dw/s50-c-k-no/photo.jpg",
+            "userId": "103136908924209293160"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -201,7 +227,12 @@
       "metadata": {
         "id": "6-_j60aISf7K",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -226,10 +257,25 @@
         "id": "6WGXBxcDVb4i",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "d5eb7ba9-7899-4b6c-d3ab-a1b30216eb42"
+        "outputId": "d5eb7ba9-7899-4b6c-d3ab-a1b30216eb42",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1532546499195,
+          "user_tz": -360,
+          "elapsed": 834,
+          "user": {
+            "displayName": "Nasir Islam Sujan",
+            "photoUrl": "//lh5.googleusercontent.com/-NpCHvBqVfWs/AAAAAAAAAAI/AAAAAAAAAUw/a6BBs_6o9Dw/s50-c-k-no/photo.jpg",
+            "userId": "103136908924209293160"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -279,7 +325,12 @@
       "metadata": {
         "id": "03CTz9N_fMSl",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -295,7 +346,12 @@
       "metadata": {
         "id": "DD7q7L-8XKgb",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -310,10 +366,25 @@
         "id": "avvA56J75CiR",
         "colab_type": "code",
         "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          },
           "base_uri": "https://localhost:8080/",
           "height": 391
         },
-        "outputId": "f50da377-dbb6-4b56-8afd-b5c8eaf4fc4e"
+        "outputId": "f50da377-dbb6-4b56-8afd-b5c8eaf4fc4e",
+        "executionInfo": {
+          "status": "ok",
+          "timestamp": 1532546547932,
+          "user_tz": -360,
+          "elapsed": 781,
+          "user": {
+            "displayName": "Nasir Islam Sujan",
+            "photoUrl": "//lh5.googleusercontent.com/-NpCHvBqVfWs/AAAAAAAAAAI/AAAAAAAAAUw/a6BBs_6o9Dw/s50-c-k-no/photo.jpg",
+            "userId": "103136908924209293160"
+          }
+        }
       },
       "cell_type": "code",
       "source": [
@@ -352,7 +423,12 @@
       "metadata": {
         "id": "gnYC9iDQ5H1w",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "autoexec": {
+            "startup": false,
+            "wait_interval": 0
+          }
+        }
       },
       "cell_type": "code",
       "source": [
