--- a/A better version of CSC(Classify Students Category)/A better version of CSC.ipynb
+++ b/A better version of CSC(Classify Students Category)/A better version of CSC.ipynb
@@ -255,7 +255,7 @@
     "_uuid": "8d3a63ead356771966f70b2987aff29d3e41bf11"
    },
    "source": [
-    "> ### Before jumping into __Data Cleaning__ and __Feature Engineering__ lets make a model based on only 3 features (raisedhands, VisITedResources, AnnouncementsView) described in this [paper](https://github.com/78526Nasir/Kaggle-Student-s-Academic-Performance/blob/master/related%20resarch%20paper/Classify%20the%20Category%20of%20Students%20%20p28-alam.pdf) as top/most effective variables"
+    "> Before jumping into __Data Cleaning__ and __Feature Engineering__ lets make a model based on only 3 features (raisedhands, VisITedResources, AnnouncementsView) described in this [paper](https://github.com/78526Nasir/Kaggle-Student-s-Academic-Performance/blob/master/related%20resarch%20paper/Classify%20the%20Category%20of%20Students%20%20p28-alam.pdf) as top/most effective variables"
    ]
   },
   {
