--- a/Python for Machine Learning/Part 1.ipynb
+++ b/Python for Machine Learning/Part 1.ipynb
@@ -192,7 +192,7 @@
    "source": [
     "#### DataFrame.describe() :\n",
     "\n",
-    "The `describe()` method tells us a lot of things about the dataset. One important is that `describe()` method deals only with numeric valued features. That's why it doesn't display `Name`, `Type 1`, and `Type 2` features description.\n",
+    "The `describe()` method tells us a lot of things about the dataset. One important thing is that `describe()` method deals only with numeric valued features. That's why it doesn't display `Name`, `Type 1`, and `Type 2` features description.\n",
     "\n",
     "Now, let's get a deeper understanding of describe() method.\n",
     "* `Count` tells us the number of NoN-empty rows in a feature.\n",
