adding kaggle and colab link

--- a/An EDA on Lower Back Pain Symptoms Dataset/An EDA on Lower Back Pain Dataset.ipynb
+++ b/An EDA on Lower Back Pain Symptoms Dataset/An EDA on Lower Back Pain Dataset.ipynb
@@ -41,7 +41,10 @@
     "|Col10|  cervical_tilt |numeric, float64|\n",
     "|Col11| sacrum_angle |numeric, float64|\n",
     "|Col12| scoliosis_slope |numeric, float64|\n",
-    "|Class_att| Attribute Class | categorical, object|\n"
+    "|Class_att| Attribute Class | categorical, object|\n",
+    "\n",
+    "\n",
+    "View this kernel in [Kaggle](https://www.kaggle.com/nasirislamsujan/exploratory-data-analysis-lower-back-pain?scriptVersionId=5480406), [Google Colab](https://colab.research.google.com/drive/1m4ZOmii2y9W8YfsWow7wLN3K8Ia84j9Y)"
    ]
   },
   {
