modify spelling mistakes

--- a/An EDA on Lower Back Pain Symptoms Dataset/An EDA on Lower Back Pain Dataset.ipynb
+++ b/An EDA on Lower Back Pain Symptoms Dataset/An EDA on Lower Back Pain Dataset.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "According to the American Association of Neurological Surgeons, 75 to 85 percent of Americans will experience back pain in their lifetime. Of those, 50 percent will have more than one episode within a year. In 90 percent of all cases, the pain gets better without surgery. Talk to your doctor if you’re experiencing back pain. \n",
     "\n",
-    "In this [Exploratory Data Analysis (EDA)](https://en.wikipedia.org/wiki/Exploratory_data_analysis) I am going to use the Lower Back Pain Symptoms Dataset and try to find out ineresting insights of this dataset. \n",
+    "In this [Exploratory Data Analysis (EDA)](https://en.wikipedia.org/wiki/Exploratory_data_analysis) I am going to use the Lower Back Pain Symptoms Dataset and try to find out interesting insights of this dataset. \n",
     "\n",
     "\n",
     "## Dataset Description\n",
@@ -353,7 +353,7 @@
     "\n",
     "* `min` tells us the minimum value of that feature.\n",
     "\n",
-    "* `25%`, `50%`, and `75%` are the percentile/quertile of each features. This quertile information helps us to detect [Outliers](https://machinelearningmastery.com/how-to-identify-outliers-in-your-data/).\n",
+    "* `25%`, `50%`, and `75%` are the percentile/quartile of each features. This quartile information helps us to detect [Outliers](https://machinelearningmastery.com/how-to-identify-outliers-in-your-data/).\n",
     "\n",
     "* `max` tells us the maximum value of that feature.\n"
    ]
@@ -749,7 +749,7 @@
     "_uuid": "e6759910f63d39ca9df0d49e42446cb437cc72c8"
    },
    "source": [
-    "[DataFrame.info()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.info.html) prints information about a DataFrame including the `index` dtype and `column` dtypes, `non-null` values and memory usage. We can use the `info()` to know whether a dataset contains any missing value or not."
+    "[DataFrame.info()](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.info.html) prints information about a DataFrame including the `index` dtype and `column` dtypes, `non-null` values and memory usage. We can use the `info()` method to know whether a dataset contains any missing value or not."
    ]
   },
   {
@@ -1537,15 +1537,6 @@
    "source": [
     "sns.set(style=\"white\", color_codes=True)\n",
     "sns.jointplot(x=X[\"degree_spondylolisthesis\"], y=label, kind='kde', color=\"skyblue\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "_uuid": "d84a43d7383902f861cc5ae4f01a5b27cc595e8b"
-   },
-   "source": [
-    "__That all. If you think the kernel is useful, then give a upvote. Cheers :) __"
    ]
   },
   {
