--- a/An EDA on Classify Student Category Kaggle Datasets/final_kernel.ipynb
+++ b/An EDA on Classify Student Category Kaggle Datasets/final_kernel.ipynb
@@ -1183,8 +1183,7 @@
    "cell_type": "code",
    "execution_count": 431,
    "metadata": {
-    "_uuid": "71a2ee51e155ca44e6e290ca7ea1c9fe01e44755",
-    "scrolled": true
+    "_uuid": "71a2ee51e155ca44e6e290ca7ea1c9fe01e44755"
    },
    "outputs": [
     {
